--- a/.github/workflows/atomicdex-desktop-ci.yml
+++ b/.github/workflows/atomicdex-desktop-ci.yml
@@ -206,17 +206,17 @@ jobs:
           keychain-password: ${{ github.run_id }}
           p12-file-base64: ${{ secrets.CERTIFICATES_P12 }}
           p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
-
-      - name: import installer code signing certificates (macos)
-        if: runner.os == 'macOS'  && 'KomodoPlatform/atomicDEX-Desktop' == github.repository
-        uses: apple-actions/import-codesign-certs@v1
-        with:
-          keychain: ${{ github.run_id }}
-          keychain-password: ${{ github.run_id }}
-          create-keychain: false
-          p12-file-base64: ${{ secrets.CERTIFICATES_INSTALLER_P12 }}
-          p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
-
+#---
+#      - name: import installer code signing certificates (macos)
+#        if: runner.os == 'macOS'  && 'KomodoPlatform/atomicDEX-Desktop' == github.repository
+#        uses: apple-actions/import-codesign-certs@v1
+#        with:
+#          keychain: ${{ github.run_id }}
+#          keychain-password: ${{ github.run_id }}
+#          create-keychain: false
+#          p12-file-base64: ${{ secrets.CERTIFICATES_INSTALLER_P12 }}
+#          p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
+#---
 
 
       - name: Build AtomicDEX (MacOS)
